--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Layout from '../layouts/Layout.astro'
 import Hero from '../components/Hero.astro'
 import About from '../components/About.astro'
 import Experience from '../components/Experience.astro'
+import Education from '../components/Education.astro'
 ---
 
 <Layout title="Welcome to Astro.">
@@ -19,6 +20,7 @@ import Experience from '../components/Experience.astro'
 				<div class="space-y-6">
 					<About />
 					<Experience />
+					<Education />
 				</div>
 			</div>
 		</main>
